tests/ui/diagnostic-not-implemented-issue-1296.stable.stderr
error[E0277]: the trait bound `NotZerocopy: Immutable` is not satisfied
  --> $DIR/diagnostic-not-implemented-issue-1296.rs:50:19
   |
50 |     Foo.write_obj(NotZerocopy(()));
   |         --------- ^^^^^^^^^^^^^^^ the trait `Immutable` is not implemented for `NotZerocopy`
   |         |
   |         required by a bound introduced by this call
   |
note: required by a bound in `Foo::write_obj`
  --> $DIR/diagnostic-not-implemented-issue-1296.rs:56:21
   |
56 |     fn write_obj<T: Immutable + IntoBytes>(&mut self, _val: T) {}
   |                     ^^^^^^^^^ required by this bound in `Foo::write_obj`
help: consider borrowing here
   |
50 |     Foo.write_obj(&NotZerocopy(()));
   |                   +
50 |     Foo.write_obj(&mut NotZerocopy(()));
   |                   ++++

error[E0277]: the trait bound `NotZerocopy: IntoBytes` is not satisfied
  --> $DIR/diagnostic-not-implemented-issue-1296.rs:50:19
   |
50 |     Foo.write_obj(NotZerocopy(()));
   |         --------- ^^^^^^^^^^^^^^^ unsatisfied trait bound
   |         |
   |         required by a bound introduced by this call
   |
help: the trait `IntoBytes` is not implemented for `NotZerocopy`
  --> $DIR/../include.rs:15:5
   |
15 |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(IntoBytes)]` to `NotZerocopy`
   = help: the following other types implement trait `IntoBytes`:
             ()
             AU16
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
             AtomicU16
             AtomicU32
             AtomicU64
             AtomicU8
             AtomicUsize
             Cell<T>
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
             Isize<O>
             ManuallyDrop<T>
             NonZero<i128>
             NonZero<i16>
             NonZero<i32>
             NonZero<i64>
             NonZero<i8>
             NonZero<isize>
             NonZero<u128>
             NonZero<u16>
             NonZero<u32>
             NonZero<u64>
             NonZero<u8>
             NonZero<usize>
             Option<NonZero<i128>>
             Option<NonZero<i16>>
             Option<NonZero<i32>>
             Option<NonZero<i64>>
             Option<NonZero<i8>>
             Option<NonZero<isize>>
             Option<NonZero<u128>>
             Option<NonZero<u16>>
             Option<NonZero<u32>>
             Option<NonZero<u64>>
             Option<NonZero<u8>>
             Option<NonZero<usize>>
             PhantomData<T>
             ReadOnly<T>
             SliceDst<T, U>
             U128<O>
             U16<O>
             U32<O>
             U64<O>
             Unalign<T>
             UnsafeCell<T>
             Usize<O>
             Wrapping<T>
             [T; N]
             [T]
             __m128
             __m128d
             __m128i
             __m256
             __m256d
             __m256i
             __m512
             __m512bh
             __m512d
             __m512i
             bool
             char
             f32
             f64
             i128
             i16
             i32
             i64
             i8
             isize
             str
             u128
             u16
             u32
             u64
             u8
             usize
note: required by a bound in `Foo::write_obj`
  --> $DIR/diagnostic-not-implemented-issue-1296.rs:56:33
   |
56 |     fn write_obj<T: Immutable + IntoBytes>(&mut self, _val: T) {}
   |                                 ^^^^^^^^^ required by this bound in `Foo::write_obj`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
